RESOLVED FIXED211797
[iOS] REGRESSION: (r261342) Play/pause button doesn't work upon first entering fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=211797
Summary [iOS] REGRESSION: (r261342) Play/pause button doesn't work upon first enterin...
Jer Noble
Reported 2020-05-12 13:03:56 PDT
[iOS] Play/pause button doesn't work upon first entering fullscreen mode
Attachments
Patch (3.32 KB, patch)
2020-05-12 13:11 PDT, Jer Noble
eric.carlson: review+
Patch for landing (3.96 KB, patch)
2020-05-12 13:44 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-05-12 13:06:30 PDT
Jer Noble
Comment 2 2020-05-12 13:11:33 PDT
Darin Adler
Comment 3 2020-05-12 13:13:50 PDT
Comment on attachment 399158 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=399158&action=review > Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.mm:147 > + float playbackRate = isStalled() ? 0.000001 : this->playbackRate(); A magic number like this needs a "why" comment. Unless people working on media would immediately understand why this value is correct, and it’s just lack of expertise?
Jer Noble
Comment 4 2020-05-12 13:33:51 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 399158 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=399158&action=review > > > Source/WebCore/platform/cocoa/PlaybackSessionModelMediaElement.mm:147 > > + float playbackRate = isStalled() ? 0.000001 : this->playbackRate(); > > A magic number like this needs a "why" comment. Unless people working on > media would immediately understand why this value is correct, and it’s just > lack of expertise? Hah, sure. You're right that it's an arbitrary magic number, picked so that even if your stall lasted two weeks, the scrubber would only move forward a second or so. But yes, I'll move that magic number to a static constant and add a comment before landing.
Jer Noble
Comment 5 2020-05-12 13:44:17 PDT
Created attachment 399169 [details] Patch for landing
EWS
Comment 6 2020-05-12 17:02:31 PDT
Committed r261587: <https://trac.webkit.org/changeset/261587> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399169 [details].
Note You need to log in before you can comment on or make changes to this bug.